2012-09-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c (open_dvi_output): sync with W32TeX. On Windows,
	use $SELFAUTOLOC/xdvipdfmx.exe as a driver for security reason.
	Otherwise a malicious xdvipdfmx.bat in the current directory can
	be called.

2012-08-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am: Use Automake generated rule for ObjC++ file,
	it is no longer necessary to build a separate libxetexmm.a.
	* XeTeXFontMgr_Mac.cpp (removed): Obsolete.

2012-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeXswap.h [WIN32]: Do not '#define inline __inline';
	if needed this comes via c-auto.h or ../../kpathsea/config.h.

2012-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeXFontMgr.cpp, XeTeXLayoutInterface.cpp: Always put
	'#define M_PI' immediately after '#include <math.h>'.
	* numbers.h: Drop unused definition of M_PI.

2012-08-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: use rewind(f) instead of fseek(f, 0, SEEK_SET)
	in u_open_in() in order to work also on W32.

2012-08-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeXFontMgr.cpp: Add 'extern "C" {' to avoid link error in MSVC.
	* XeTeX_ext.c: Change order of inlusion of headers to be able to
	compile by using MSVC.
	* XeTeX_ext.h: Add 'extern "C" {' to avoid link error in MSVC.

2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am: Clarify *tex_version.h dependencies.

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am: Distribute xetex_version.h.
	* xetexextra.h: Use ../etexdir/etex_version.h.

2012-06-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex.ch: XeTeX uses 256 math font families.

2012-05-07  Khaled Hosny  <khaledhosny@eglug.org>

	* am/xetex.am (xetex_web_srcs): Drop enctex.ch.
	* xetex.ch, xetex-latex3.ch: Adjusted.

2012-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am (EXTRA_DIST): Drop pool2c.pl (is removed).

2012-05-05  Khaled Hosny  <khaledhosny@eglug.org>
