@@ -67,8 +67,8 @@ authorization from the copyright holders.
 @d TeX_banner=='This is TeX, Version 3.1415926' {printed when \TeX\ starts}
 @#
 @d XeTeX_version=0
-@d XeTeX_revision==".9998"
-@d XeTeX_version_string=='-0.9998' {current \XeTeX\ version}
+@d XeTeX_revision==".9999"
+@d XeTeX_version_string=='-0.9999' {current \XeTeX\ version}
 @#
 @d XeTeX_banner=='This is XeTeX, Version 3.1415926',eTeX_version_string,XeTeX_version_string
   {printed when \XeTeX\ starts}
@@ -1682,6 +1682,17 @@ match: begin match_chr:=c; print_char(c); incr(n); print_char(n);
 @* \[21] Introduction to the syntactic routines.
 @y
 @* \[21] Introduction to the syntactic routines.
+@z
+
+@x
+@d chr_cmd(#)==begin print(#); print_ASCII(chr_code);
+  end
+@y
+@d chr_cmd(#)==begin print(#);
+   if chr_code < @"10000 then print_ASCII(chr_code)
+   {non-Plane 0 Unicodes can't be sent through |print_ASCII|}
+   else begin print("number "); print_hex(chr_code) end;
+  end
 @z
 
 @x
@@ -4628,7 +4639,7 @@ if is_native_font(cur_f) then begin
   set_native_glyph_metrics(p, 1);
   free_node(z, native_size(z));
   delta:=get_ot_math_ital_corr(cur_f, native_glyph(p));
-  if (math_type(nucleus(q))=math_text_char)and(space(cur_f)<>0) then
+  if (math_type(nucleus(q))=math_text_char)and(not is_new_mathfont(cur_f)<>0) then
     delta:=0; {no italic correction in mid-word of text font}
   if (math_type(subscr(q))=empty)and(delta<>0) then
     begin link(p):=new_kern(delta); delta:=0;
